fix: sketch box grow to fill whitespace

--- a/style.css
+++ b/style.css
@@ -123,6 +123,7 @@ footer {
 }
 
 .sketch-box {
+    flex-grow: 2;
     border: 1px solid #00000010;
 }
 
